--- a/notebooks/unit3/unit3.ipynb
+++ b/notebooks/unit3/unit3.ipynb
@@ -296,11 +296,11 @@
         "  frame_stack: 4\n",
         "  policy: 'CnnPolicy'\n",
         "  n_timesteps: !!float 1e6\n",
-        "  buffer_size: 100000\n",
+        "  buffer_size: 10000\n",
         "  learning_rate: !!float 1e-4\n",
         "  batch_size: 32\n",
-        "  learning_starts: 100000\n",
-        "  target_update_interval: 1000\n",
+        "  learning_starts: 10000\n",
+        "  target_update_interval: 500\n",
         "  train_freq: 4\n",
         "  gradient_steps: 1\n",
         "  exploration_fraction: 0.1\n",
@@ -374,14 +374,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "PuocgdokSab9"
-      },
-      "outputs": [],
       "source": [
         "!python -m rl_zoo3.train --algo dqn  --env SpaceInvadersNoFrameskip-v4 -f logs/ -c dqn.yml"
-      ]
+      ],
+      "metadata": {
+        "id": "cNmEr7VMtQEw"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -402,7 +402,7 @@
       },
       "outputs": [],
       "source": [
-        "!python -m rl_zoo3.enjoy  --algo dqn  --env SpaceInvadersNoFrameskip-v4  --no-render  --n-timesteps _________  --folder logs/"
+        "!python -m rl_zoo3.enjoy  --algo dqn  --env SpaceInvadersNoFrameskip-v4  --no-render  --n-timesteps 5000  --folder logs/"
       ]
     },
     {
@@ -654,7 +654,7 @@
       },
       "outputs": [],
       "source": [
-        "!python -m rl_zoo3.enjoy --algo dqn --env BeamRiderNoFrameskip-v4 -n 5000  -f rl_trained/ --no-render"
+        "!python -m rl_zoo3.enjoy --algo dqn --env BeamRiderNoFrameskip-v4 -n 5000 -f rl_trained/ --no-render"
       ]
     },
     {
@@ -755,11 +755,11 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -803,8 +803,7 @@
       ],
       "window_display": false
     },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
